Fix accidentally broken firepad/codemirror includes.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Firepad - An open source collaborative code and text editor</title>
   <meta name="description" content="An open source collaborative code and text editor. Share documents and see changes occur in real-time." />
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="examples/codemirror/lib/codemirror.css" />
-  <link rel="stylesheet" href="examples/firepad.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/codemirror.css" />
+  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.1.1/firepad.css" />
   <link rel="stylesheet" href="examples/firepad-userlist.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/borland.css" />
@@ -267,8 +267,8 @@
   }(document, 'script', 'facebook-jssdk'));</script>
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
-  <script src="examples/codemirror/lib/codemirror.js"></script>
-  <script src="examples/firepad.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/codemirror.js"></script>
+  <script src="https://cdn.firebase.com/libs/firepad/1.1.1/firepad.min.js"></script>
   <script src="examples/firepad-userlist.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript">
