Rework for Firebase Hosting.
* Move sources under src/ directory.
* Update gemfile.
* Add firebase.json.
* Add deploy.sh script.
* Update README.md
* Fix links to embedded resources to be https.

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
           <a href="https://groups.google.com/forum/#!forum/firepad-io" target="_blank">Google Group</a>
-          <a href="http://demo.firepad.io/" target="_blank" class="private-firepad"></a>
+          <a href="https://demo.firepad.io/" target="_blank" class="private-firepad"></a>
         </div>
         <div id="home-title-container" class="clearfix">
             <img src="images/firepad_logo.png" />
@@ -58,19 +58,19 @@
       <div class="social-container clearfix">
         <ul class="social-buttons">
           <li>
-            <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+            <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
           </li>
           <li>
-            <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+            <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
           </li>
           <li class="follow-btn">
             <a href="https://twitter.com/firepad" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @Firepad</a>
           </li>
           <li class="tweet-btn">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
           </li>
           <li class="fb-btn">
-            <div class="fb-like" data-href="http://www.firepad.io" data-send="false" data-layout="button_count" data-width="200" data-show-faces="false"></div>
+            <div class="fb-like" data-href="https://www.firepad.io" data-send="false" data-layout="button_count" data-width="200" data-show-faces="false"></div>
           </li>
         </ul>
       </div>
@@ -256,7 +256,7 @@
   </div>
 
   <!-- JavaScript -->
-  <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+  <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
   <div id="fb-root"></div>
   <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
