Updated docs for Firepad 1.4.0

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -48,10 +48,10 @@
     <div class="span9">
       <section id="intro">
         <div class="uses-title example-title">All Examples</div>
-        <p>Examples are checked into the github repository.  You can take a look with:</p>
+        <p>Examples are checked into the GitHub repository.  You can take a look with:</p>
         <pre>&gt; git clone git://github.com/firebase/firepad.git
 &gt; open firepad/examples/index.html</pre>
-        <p>Or you can view them below and click "View Source on Github" to jump to the source.</p>
+        <p>Or you can view them below and click "View Source on GitHub" to jump to the source.</p>
       </section>
 
       <section id="richtext">
@@ -122,10 +122,10 @@
   <!-- ACE -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/mode-javascript.js"></script>
-  
+
   <link rel="stylesheet" href="firepad-userlist.css" />
   <script src="firepad-userlist.js"></script>
-  
+
   <script src="../js/examples.js"></script>
   <script src="../js/prettify.js"></script>
   <script type="text/javascript">
