fix cursor issue in setOtherCursor of monaco-adapter

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,9 @@
     <!-- CodeMirror -->
     <script src="../bower_components/codemirror/lib/codemirror.js"></script>
 
+    <!-- Monaco -->
+    <script src="../bower_components/monaco-editor-official/monaco.d.ts"></script>
+
     <!-- Firebase -->
     <script src="../bower_components/firebase/firebase.js"></script>
 
