Update suggested fix

--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -6,11 +6,11 @@
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 
     <!-- Firepad -->
-    <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.css" />
-    <script src="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.min.js"></script>
+    <link rel="stylesheet" href="./../dist/firepad.css" />
+    <script src="./../dist/firepad.min.js"></script>
 
     <!-- Loader.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.13.1/min/vs/loader.js"></script>
+    <script src="./../node_modules/monaco-editor/min/vs/loader.js"></script>
 
     <style>
         html { height: 100%; }
