remove coffee, fix dependencies with update, and have grunt build working

--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
 
     <!-- Firepad -->
     <link rel="stylesheet" href="./../dist/firepad.css" />
@@ -32,9 +32,12 @@
         //// Initialize Firebase.
         //// TODO: replace with your Firebase project configuration.
         var config = {
-            apiKey: "AIzaSyC_JdByNm-E1CAJUkePsr-YJZl7W77oL3g",
-            authDomain: "firepad-tests.firebaseapp.com",
-            databaseURL: "https://firepad-tests.firebaseio.com"
+          apiKey: "AIzaSyAOK-ANxXkWbUV4Wg59NDo4rVNXCMWwHY8",
+          authDomain: "firepad-test-e4255.firebaseapp.com",
+          databaseURL: "https://firepad-test-e4255.firebaseio.com",
+          projectId: "firepad-test-e4255",
+          storageBucket: "firepad-test-e4255.appspot.com",
+          messagingSenderId: "888268353854"
         };
         firebase.initializeApp(config);
 
