--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -7,7 +7,7 @@
 
     <!-- Firepad -->
     <link rel="stylesheet" href="./../dist/firepad.css" />
-    <script src="./../dist/firepad.min.js"></script>
+    <script src="./../dist/firepad.js"></script>
 
     <!-- Loader.js -->
     <script src="./../node_modules/monaco-editor/min/vs/loader.js"></script>
