remove references to apiKey; add dist back to gitignore; fix merge conflict in travis.yml; and update packages in package.json to include version numbers

--- a/examples/ace.html
+++ b/examples/ace.html
@@ -34,7 +34,7 @@
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
       var config = {
-        apiKey: "AIzaSyC_JdByNm-E1CAJUkePsr-YJZl7W77oL3g",
+        apiKey: '<API_KEY>',
         authDomain: "firepad-tests.firebaseapp.com",
         databaseURL: "https://firepad-tests.firebaseio.com"
       };
