--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -32,7 +32,7 @@
         //// Initialize Firebase.
         //// TODO: replace with your Firebase project configuration.
         var config = {
-          apiKey: "AIzaSyAOK-ANxXkWbUV4Wg59NDo4rVNXCMWwHY8",
+          apiKey: '<API_KEY>',
           databaseURL: "https://firepad-test-e4255.firebaseio.com",
           projectId: "firepad-test-e4255",
         };
