--- a/examples/code.html
+++ b/examples/code.html
@@ -34,7 +34,7 @@
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
       var config = {
-        apiKey: "AIzaSyC_JdByNm-E1CAJUkePsr-YJZl7W77oL3g",
+        apiKey: '<API_KEY>',
         authDomain: "firepad-tests.firebaseapp.com",
         databaseURL: "https://firepad-tests.firebaseio.com"
       };
