--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
 
     <!-- Firepad -->
     <link rel="stylesheet" href="./../dist/firepad.css" />
-    <script src="./../dist/firepad.min.js"></script>
+    <script src="./../dist/firepad.js"></script>
 
     <!-- Loader.js -->
     <script src="./../node_modules/monaco-editor/min/vs/loader.js"></script>
@@ -32,9 +32,9 @@
         //// Initialize Firebase.
         //// TODO: replace with your Firebase project configuration.
         var config = {
-            apiKey: "AIzaSyC_JdByNm-E1CAJUkePsr-YJZl7W77oL3g",
-            authDomain: "firepad-tests.firebaseapp.com",
-            databaseURL: "https://firepad-tests.firebaseio.com"
+          apiKey: '<API_KEY>',
+          databaseURL: "https://firepad-test-e4255.firebaseio.com",
+          projectId: "firepad-test-e4255",
         };
         firebase.initializeApp(config);
 
