Add EXLskills to user list

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,14 @@
           <div class="uses-col clearfix">
             <div class="uses-title">Built with Firepad:</div>
             <div class="clearfix">
+              <div class="use-icon"><img src="images/user_exlskills.png"></div>
+              <div class="use-text">
+                <a href="https://exlskills.com/learn-en/talent/interviews" class="use-link" target="_blank">EXLskills Live Coding Interviews Platform</a>
+                Free real-time online coding environment for conducting live interviews
+                <a href="https://exlskills.com/learn-en/talent/interviews" target="_blank">Try it »</a>
+              </div>
+            </div>
+            <div class="clearfix">
               <div class="use-icon" style="margin-top: 9px;"><img src="images/user_atlassian.png"></div>
               <div class="use-text">
                 <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" class="use-link" target="_blank">Stash Realtime Editor from Atlassian</a>
