Clean up "Buit with Firepad" list and add Monaco to list of supported editors.

--- a/src/index.html
+++ b/src/index.html
@@ -102,43 +102,11 @@
           <div class="uses-col clearfix">
             <div class="uses-title">Built with Firepad:</div>
             <div class="clearfix">
-              <div class="use-icon"><img src="images/user_exlskills.png"></div>
-              <div class="use-text">
-                <a href="https://exlskills.com/learn-en/talent/interviews" class="use-link" target="_blank">EXLskills Live Coding Interviews Platform</a>
-                Free real-time online coding environment for conducting live interviews
-                <a href="https://exlskills.com/learn-en/talent/interviews" target="_blank">Try it »</a>
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="use-icon" style="margin-top: 9px;"><img src="images/user_atlassian.png"></div>
-              <div class="use-text">
-                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" class="use-link" target="_blank">Stash Realtime Editor from Atlassian</a>
-                Pair programming for the enterprise.
-                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" target="_blank">Try it »</a>
-              </div>
-            </div>
-            <div class="clearfix">
               <div class="use-icon"><img src="images/user_socrates.png"></div>
               <div class="use-text">
                 <a href="http://socrates.io/" class="use-link" target="_blank">Socrates.io</a>
                 A collaborative markdown editor and previewer.
                 <a href="http://socrates.io/" target="_blank">Try it »</a>
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="use-icon"><img src="images/user_nitrous.png"></div>
-              <div class="use-text">
-                <a href="http://nitrous.io/" class="use-link" target="_blank">Nitrous.IO</a>
-                A development platform with a collaborative web IDE.
-                <a href="http://nitrous.io/" target="_blank">Try it »</a>
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="use-icon"><img src="images/user_liveminutes.png"></div>
-              <div class="use-text">
-                <a href="http://liveminutes.com/" class="use-link" target="_blank">LiveMinutes</a>
-                A full-featured collaboration service with live collaboration features.
-                <a href="http://liveminutes.com/" target="_blank">Try it »</a>
               </div>
             </div>
             <div class="clearfix">
@@ -166,11 +134,11 @@
               </div>
             </div>
             <div class="clearfix">
-              <div class="use-icon"><img src="images/user_kobra.png"></div>
+              <div class="use-icon"><img src="images/user_exlskills.png"></div>
               <div class="use-text">
-                <a href="https://kobra.io/" class="use-link" target="_blank">Kobra.io</a>
-                Kobra.io is a realtime collaborative code editor with built-in video and text chat, powered by Firepad and AngularFire.
-                <a href="https://kobra.io/" target="_blank">Try it »</a>
+                <a href="https://exlskills.com/learn-en/talent/interviews" class="use-link" target="_blank">EXLskills Live Coding Interviews Platform</a>
+                Free realtime online coding environment for conducting live interviews
+                <a href="https://exlskills.com/learn-en/talent/interviews" target="_blank">Try it »</a>
               </div>
             </div>
           </div>
@@ -211,9 +179,15 @@
           <div class="faq-col">
             <div class="faq-question">
             <div class="faq-title">Which technologies does Firepad use?</div>
-              <span>Firepad can use either the <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor or the <a href="http://ace.c9.io" target="_blank"> Ace</a> editor to render documents, and its operational transform
-              code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses the <a href="https://firebase.google.com/docs/database/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank">Firebase Realtime Database</a>
-              for cloud data storage and synchronization.</span>
+              <span>Firepad can render documents using the
+                <a href="http://codemirror.net" target="_blank">CodeMirror</a>,
+                <a href="http://ace.c9.io" target="_blank">Ace</a>, or
+                <a href="https://microsoft.github.io/monaco-editor/" target="_blank">Monaco</a>
+                editors, and its operational transform code borrows from
+                <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>.
+                Behind the scenes, Firepad uses the
+                <a href="https://firebase.google.com/docs/database/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank">Firebase Realtime Database</a>
+                for cloud data storage and synchronization.</span>
             </div>
             <div class="faq-question">
               <div class="faq-title">Who's behind Firepad?</div>
