Update examples to current firebase, firepad, and firepad-userlist.
We were still using 2.x Firebase and therefore an olde version of firepad and firepad-userlist.  Update everything.

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -112,7 +112,7 @@
   <script src="../js/bootstrap-affix.js"></script>
 
   <!-- Firebase -->
-  <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase.js""></script>
 
   <!-- CodeMirror -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.js"></script>
