--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -10,7 +10,7 @@
   <link href="../css/prettify.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/global.css" />
   <link href="../images/favicon.ico" rel="shortcut icon" />
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/{{site.firepad_version}}/firepad.css" />
+  <link rel="stylesheet" href="../releases/{{site.firepad_version}}/firepad.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.css" />
 </head>
 
@@ -119,7 +119,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.js"></script>
 
   <!-- Firepad -->
-  <script src="https://cdn.firebase.com/libs/firepad/{{site.firepad_version}}/firepad.min.js"></script>
+  <script src="../releases/{{site.firepad_version}}/firepad.min.js"></script>
 
   <!-- ACE -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"></script>
