Point examples at https://firepad.io/releases/1.5.4/

--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css" />
 
   <!-- Firepad -->
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.min.js"></script>
+  <link rel="stylesheet" href="https://firepad.io/releases/1.5.4/firepad.css" />
+  <script src="https://firepad.io/releases/1.5.4/firepad.min.js"></script>
 
   <!-- Include example userlist script / CSS.
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
