--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css" />
 
   <!-- Firepad -->
-  <script src="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.min.js"></script>
+  <script src="https://firepad.io/releases/1.5.4/firepad.min.js"></script>
 
   <style>
     .CodeMirror pre {
