[firepad-release] Bumped examples to vv1.5.9

--- a/examples/ace.html
+++ b/examples/ace.html
@@ -11,8 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/theme-textmate.js"></script>
 
   <!-- Firepad -->
-  <link rel="stylesheet" href="https://firepad.io/releases/1.5.4/firepad.css" />
-  <script src="https://firepad.io/releases/1.5.4/firepad.min.js"></script>
+  <link rel="stylesheet" href="https://firepad.io/releases/v1.5.9/firepad.css" />
+  <script src="https://firepad.io/releases/v1.5.9/firepad.min.js"></script>
 
   <style>
     html { height: 100%; }
