[Fix] Model Content: Initialize Model Content with Empty Line
Handle case for first update. Do not update model content if new model does not have any content.

Signed-off-by: Progyan Bhattacharya <bprogyan@gmail.com>

--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -48,7 +48,7 @@
           var editor = monaco.editor.create(document.getElementById('firepad'), {
             language: 'javascript',
             fontSize: 18,
-            theme: 'vs',
+            theme: 'vs-dark',
             trimAutoWhitespace: false,
           });
           var firepad = Firepad.fromMonaco(firepadRef, editor, {
