Switch test project

--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -44,8 +44,8 @@
       //// TODO: replace with your Firebase project configuration.
       var config = {
         apiKey: '<API_KEY>',
-        authDomain: "firepad-tests.firebaseapp.com",
-        databaseURL: "https://firepad-tests.firebaseio.com"
+        authDomain: "firepad-gh-tests.firebaseapp.com",
+        databaseURL: "https://firepad-gh-tests.firebaseio.com"
       };
       firebase.initializeApp(config);
 
