--- a/examples/monaco.html
+++ b/examples/monaco.html
@@ -33,8 +33,8 @@
         //// TODO: replace with your Firebase project configuration.
         var config = {
           apiKey: '<API_KEY>',
-          databaseURL: "https://firepad-test-e4255.firebaseio.com",
-          projectId: "firepad-test-e4255",
+          databaseURL: "https://firepad-gh-tests.firebaseio.com",
+          projectId: "firepad-gh-tests",
         };
         firebase.initializeApp(config);
 
